--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1>Come check out some GIFs</h1>
 
     <form action="#">
-      <input type="text" name="search-field" placeholder="Type Here">
+      <input type="text" name="search-field" placeholder="Type Here" class="search-text">
       <br><br>
-      <input type="submit" value="Search">
+      <input type="submit" value="Search" class="search-button">
     </form>
 
     <div class="search-results">
