--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>GiphyTime</title>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|ZCOOL+KuaiLe" rel="stylesheet">
     <link rel="stylesheet" href="./lib/css-reset.css">
     <link rel="stylesheet" href="./lib/styles.css">
   </head>
