--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="search-results">
     </div>
     <script src="./lib/index.js"></script>
+    <script>enableSearch();</script>
   </body>
 
 </html>
