--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Come check out some GIFs</h1>
 
-    <form action="#">
+    <form>
       <input type="text" name="search-field" placeholder="Type Here" class="search-text">
       <br><br>
       <input type="submit" value="Search" class="search-button">
@@ -21,7 +21,7 @@
     <div class="search-results">
     </div>
     <script src="./lib/index.js"></script>
-    <script>enableSearch();</script>
+    <script src="./lib/htmlGenerator.js"></script>
   </body>
 
 </html>
